--- a/lesson11/style.css
+++ b/lesson11/style.css
@@ -12,15 +12,17 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-top: 1rem;
-        
+        /* margin-top: 1rem; */
+        border: #333 1px solid;  
+        gap: 1rem; 
+        flex-wrap: wrap;
     }
     
     .wrapper{
-        border: 10px solid #eee;
-        box-shadow: 0 10px 15px rgba(0, 0, 0, .7);
-      border-radius: 10px;
-
+        border: 4px solid #eee;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, .7);
+        border-radius: 10px;
+        margin: .5rem;
     }
     
     #result{
@@ -28,30 +30,40 @@
       width: 12rem;
       height: 17rem;
       text-align: center;
-      border: 10px solid #ddd;
-      border-radius: 10px;
+      border: 6px solid #ddd;
+      border-radius: 4px;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
 
     }
-    
+
 
    #result .img-container{
-        height: 6rem;
-        width: 6rem;
+        height: 5rem;
+        width: 5rem;
         border-radius: 100%;
         background: #555;
         display: flex;
         justify-content: center;
-        align-items: center;
-    }
+        align-items: center;        
+        border: #ccc 3px solid;
+        margin-bottom: 10px;
 
-   #result img{
-        height: 6rem;
-        width: 6rem;
+    }
+    
+    #result img{
+         height: 5rem;
+        width: 5rem;
         border-radius: 100%;
+    }
+    
+    .vital h3{
+        margin-bottom: -5px;
+        
+        
+
    }
 
 
@@ -107,11 +119,28 @@
     section {
       padding: 20px;
     }
+   
     header {
       background-color: #f4f4f4;
       padding: 30px;
       text-align: center;
     }
+
+     #heading{
+        margin-top: -5px;
+        color: #333;
+    }
+
+
+    *{
+        color: #333;
+        
+    }
+
+
+
+
+
 
     .active{
       font-size: larger;
