--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -7,6 +7,9 @@
     --border: .1rem solid rgba(0,0,0,.1);
     --border-hover:.1rem solid var(--black);
     --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
+    --box-shadow-current: 0 .1rem 1rem rgba(0, 0, 0, .3);
+    --background-blur: rgba(255, 255, 255, .9);
+    --background-blur-dark: rgba(0, 0, 0, .7);
 } 
 
 *{
@@ -58,18 +61,26 @@
         width: 100%;
     }
     .header .navigation.active{
-        box-shadow: 0 1px 10px rgba(0, 0, 0, .3);
-        background: rgba(255, 255, 255, .9);
+        box-shadow: var(--box-shadow-current);
+        background: var(--background-blur);
     }
     
     .header .navigation .logo{
+        font-size: 5.5rem;
+        font-weight: bolder;
+        color: var(--black);
+        z-index: 1000;
+    }
+
+    .header .navigation .menu{
+        display: none;
         font-size: 4.5rem;
         font-weight: bolder;
         color: var(--black);
     }
-    
+
     .header .navbar a{
-        font-size: 1.7rem;
+        font-size: 1.8rem;
         display: inline-block;
         text-decoration: none;
         font-weight: 700;
@@ -90,11 +101,74 @@
     nav a:hover {
       text-decoration: underline;
     }
+
+    /* ------------Mobile Nav--------- */
+    .mobile-nav{
+        position: fixed;
+        left: -115%;;top: 0;
+        background: var(--background-blur-dark);
+        width: 100%;
+        height: 100vh;
+        z-index: 1000; 
+        overflow: hidden;
+    }
+
+    /* ----javascript action----- */
+    .mobile-nav.active{
+        left: 0%;
+    }
+
+    .mobile-nav .close-menu{
+        color: var(--black);
+        font-size: 3.5rem;
+        position: absolute;
+        right: 3%;
+        top: 3%;
+        z-index: 1000;
+        cursor: pointer;
+    }
+    
+    .mobile-nav .logo{
+        background: white;
+        height: 4rem;
+        width: 4rem;
+        position: absolute;
+        left: 11%;
+        top: 5%;
+        z-index: 11000;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .mobile-nav .logo i{
+        font-size: 5.5rem;
+    }
+
+    .mobile-nav .navbar{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        position: absolute;
+        right: 0;
+        color: var(--black);
+        min-width: 35rem;
+        height: 100vh;
+        background: var(--white)
+
+    }
+
+    .mobile-nav .navbar a{
+        margin-bottom: 2.5rem;
+        font-size: 2rem;
+        font-weight: 500;
+
+    }
 /* =============Header Nav END =========== */
 
-    body{
-        height: 200rem;
-    }
+    
 /* =============Home Section=========== */
 section{
         padding: 2.5rem 10%;
@@ -103,7 +177,8 @@ section{
 }
 
 p{
-    font-size: 1.6rem;
+    font-size: 1.8rem;
+
 }
     .home {
         padding-top: 8rem;
@@ -114,14 +189,14 @@ p{
     }
 
     .home #heading{
-        font-size: 3.5rem;
+        font-size: 4rem;
     }
     .home .heading-2{
         margin-top: 1rem;
     }
     .home .heading-3{
         margin-top: 2rem;
-        font-size: 1.7rem;
+        font-size: 1.8rem;
     }
 
     .home .left-desc{
@@ -140,7 +215,6 @@ p{
         padding: 2rem 0;
         text-align: left;
         cursor: pointer;
-        /* margin-left: 1.5rem; */
         font-size: 2.5rem;
     }
     .home .left-desc .icons a:hover{
@@ -152,7 +226,6 @@ p{
         margin-top: 3rem;
         font-size: 1.7rem;
         display: flex;
-        /* justify-content: center; */
         gap: 5rem;
 
     }
@@ -200,15 +273,30 @@ p{
         background-size: cover;
     }
 
-    
-
-  
-    
 /* =============Home Section END =========== */
 
 
-    
 
+
+
+/* =============About Section  =========== */
+
+
+
+/* =============About Section END =========== */
+
+
+
+
+
+
+
+
+
+
+
+
+/* =============Media Query =========== */
     @media (max-width:760px) {
         html{
             font-size: 60%;
@@ -218,6 +306,13 @@ p{
             display: none;
         }
 
+        /* .header .navigation .logo{
+            opacity: 0;
+        } */
+
+        .header .navigation .menu{
+        display: block;
+        }
 
         .home .left-desc{
         width: 80%;
