--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -48,11 +48,11 @@
 /* =============Header Nav =========== */
     .header .navigation{
         background: var(--white);
-        padding: 2rem 9%;
+        padding: 1.5rem 7%;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        margin-bottom: 2rem;
+        /* margin-bottom: 2rem; */
     }
     .header .navigation{
         transition: top .3s;
@@ -66,7 +66,7 @@
     }
     
     .header .navigation .logo{
-        font-size: 5.5rem;
+        font-size: 4.5rem;
         font-weight: bolder;
         color: var(--black);
         z-index: 1000;
@@ -80,19 +80,18 @@
     }
 
     .header .navbar a{
-        font-size: 1.8rem;
+        font-size: 1.7rem;
         display: inline-block;
         text-decoration: none;
-        font-weight: 700;
+        font-weight: 500;
         margin-left: 1.5rem;
-
-
     }
     .header .navbar a:hover{
         background-color: var(--light-dark);
         color: var(--white);
         border: var(--border);
     }
+
     .header .navbar a:active{
         text-decoration: underline;
         color: blueviolet;
@@ -101,6 +100,16 @@
     nav a:hover {
       text-decoration: underline;
     }
+
+    .header .navigation .navbar .resume{
+        padding: .5rem 1rem;
+        border: .1rem dotted var(--black);
+        border-radius: .5rem;
+    }
+    .header .navigation .navbar .resume:hover{
+        background-color: var(--background-blur-dark);
+    }
+
 
     /* ------------Mobile Nav--------- */
     .mobile-nav{
@@ -117,6 +126,7 @@
     .mobile-nav.active{
         left: 0%;
     }
+    /* ----javascript action----- */
 
     .mobile-nav .close-menu{
         color: var(--black);
@@ -171,28 +181,113 @@
     
 /* =============Home Section=========== */
 section{
-        padding: 2.5rem 10%;
-        margin-top: 10rem;
+    padding: 5rem 9%;
+    margin-top: 7rem;
+}
 
+.heading{
+    text-align: center;
+    margin-bottom: 5rem;
+    position: relative;
+    margin-bottom: 5rem;
+}
+
+.heading::before{
+    content: '';
+    position: absolute;
+    top: 50%;left: 0;
+    transform: translateY(-50);
+    width: 100%;
+    height: 0.01rem;
+    background: rgba(0,0,0,.1);
+    z-index: -1;
+}
+
+.heading span{
+    font-size: 3rem;
+    padding: .5rem 2rem;
+    color: var(--black);
+    background: var(--white);
+    border: var(--border);
 }
 
 p{
     font-size: 1.8rem;
+    line-height: 1.5;
+}
+.icons a:hover{
+    transform: translateY(-.3rem);
+}
+
+/* ==========Botton Design========= */
+.btn:link,
+.btn:visited{
+    /* text-transform: uppercase; */
+    padding: 1.5rem 4rem;
+    display: inline-block;
+    border-radius: 10rem;
+    transition: all .2s;
+    position: relative;
 
 }
+.btn:hover{
+    transform: translateY(-.3rem);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .3)
+}
+.btn:active{
+    transform: translateY(-.1rem);
+}
+.btn.contact{
+    background: var(--black);
+    color: var(--white);
+}
+
+.btn::after{
+    content: "";
+    display: inline-block;
+    height: 100%; width: 100%;
+    border-radius: 10rem;
+    position: absolute;
+    top: 0; left: 0;
+    z-index: -1;
+    transition: all .4s;
+
+}
+
+.btn.contact::after{
+    background: var(--black);
+}
+.btn:hover::after{
+    transform: scaleX(1.3) scaleY(1.5);
+    opacity: 0;
+}
+
+
+/* ==========Botton Design END========= */
+
+
+/* ---------Home Section--------- */
     .home {
-        padding-top: 8rem;
-        text-align: left;
+        margin-top: 10rem;
         display: flex;
         justify-content: space-between;
-        /* border: 1px saddlebrown solid; */
+        display: grid;
+        grid-template-columns: repeat(auto, minmax(25rem, 1fr));
+        gap: 1.5rem;
+        height: 70vh;
+    }
+    .home .row{
+        display: flex;
+        gap: 1.5rem;
     }
 
-    .home #heading{
+    .home #heading-1{
         font-size: 4rem;
     }
     .home .heading-2{
         margin-top: 1rem;
+        font-size: 4rem;
+
     }
     .home .heading-3{
         margin-top: 2rem;
@@ -201,7 +296,8 @@ p{
 
     .home .left-desc{
         text-align: left;
-        width: 65%;
+        /* width: 65%; */
+        flex: 1 1 42rem;
     }
 
     /* ----social icon---- */
@@ -217,10 +313,10 @@ p{
         cursor: pointer;
         font-size: 2.5rem;
     }
-    .home .left-desc .icons a:hover{
+    /* .home .left-desc .icons a:hover{
         transform: scale(1.1);
         color: blue;
-    }
+    } */
 
     .home .left-desc .connection{
         margin-top: 3rem;
@@ -239,20 +335,17 @@ p{
         font-size: 1.7rem;
     }
 
-
-
-
-
-
     /* ==========Right Section========== */
     .home .right-desc{
-        width: 30%;
+        /* width: 30%; */
+        flex: 1 1 22rem;
+
         /* background: #ccc; */
         display: flex;
         justify-content: center;
-        align-items: center;
-
+        align-items: start;
     }
+
     .home .right-desc .profile{
         background: #444;
         border-radius: 50%;
@@ -262,13 +355,13 @@ p{
         justify-content: center;
         align-items: center;
     }
+
     .home .right-desc .profile .wrapper{
         background: #666;
         border-radius: 50%;
         width: 20rem;
         height: 20rem;
         background-image: url('../sample.png');
-        /* background-position: center; */
         background-repeat: no-repeat;
         background-size: cover;
     }
@@ -276,20 +369,73 @@ p{
 /* =============Home Section END =========== */
 
 
-
-
-
 /* =============About Section  =========== */
-
-
+.about{
+    /* margin-top: -8rem; */
+}
 
 /* =============About Section END =========== */
 
 
+/* =============Project Section  =========== */
+.projects .content{
+        margin-top: 10rem;
+        display: flex;
+        justify-content: space-between;
+        display: grid;
+        grid-template-columns: repeat(auto, minmax(25rem, 1fr));
+        gap: 1.5rem;
+    }
+
+    .projects .content{
+
+    }
+/* =============Project Section END =========== */
 
 
 
+/* =============Contact Section  =========== */
+footer{
+    position: relative;
+    
+}
+    .contact .content {
+        text-align: center;
+    }
 
+    .contact .content h3{
+        font-size: 3rem;
+        padding: 3rem 0;
+    }
+    .contact .content p{
+        font-size: 1.7rem;
+    }
+    .contact .content .connection .icons{
+        margin-bottom: 2rem;
+    }
+    .contact .content .connection .icons a{
+        font-size: 2.5rem;
+        margin-right: 3rem;
+        display: inline-block;
+    }
+
+    .btn.contact.footer-contact{
+        margin-top: 5rem;
+        font-size: 1.7rem;
+    }
+    
+    .contact .content .connection {
+        text-align: center;
+        margin-top: 10rem;
+    }
+    .contact .content .connection .code-link{
+        font-size: 1.4rem;
+    }
+    .contact .content .connection .code-link:hover{
+        transform: scale(1.1);
+        font-weight: 600;
+    }
+/* =============Contact Section END =========== */
 
 
 
@@ -306,12 +452,18 @@ p{
             display: none;
         }
 
-        /* .header .navigation .logo{
-            opacity: 0;
-        } */
 
         .header .navigation .menu{
         display: block;
+        }
+
+        .header .navigation{
+        padding: 2rem 6%;
+
+        }
+
+        section{
+        padding: 3rem 6%;
         }
 
         .home .left-desc{
@@ -332,6 +484,14 @@ p{
         html{
             font-size: 55%;
         }
+
+        .header .navigation{
+        padding: 2rem 4%;
+
+        }
+        section{
+        padding: 2rem 5%;
+        }
         
         .home #heading{
         font-size: 3rem;
@@ -346,6 +506,10 @@ p{
     @media (max-width:450px) {
         html{
             font-size: 50%;
+        }
+        
+        .home #heading-1{
+        font-size: 3.5rem;
         }
 
     }
